[package]
name = "nautobot-openapi"
version = "0.0.1"
authors = ["OpenAPI Generator team and contributors"]
description = "Source of truth and network automation platform"
license = "Apache v2 License"
edition = "2018"

[dependencies]
serde = "^1.0"
serde_derive = "^1.0"
serde_with = "^2.0"
serde_json = "^1.0"
url = "^2.2"
uuid = { version = "^1.0", features = ["serde"] }
[dependencies.reqwest]
version = "^0.12"
features = ["json", "multipart", "rustls-tls"]
default-features = false
