[package]
name = "nautobot"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/nautobot"
description = "ergonomic rust client for Nautobot REST API"
keywords.workspace = true
categories.workspace = true

[dependencies]
nautobot-openapi = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_urlencoded = "0.7"
thiserror = { workspace = true }
tokio = { workspace = true }
url = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros"] }
proptest = "1.5"
httpmock = "0.7"

[features]
default = []
